--- a/assignment4/crud.html
+++ b/assignment4/crud.html
@@ -18,7 +18,7 @@
 
   <!-- NAVBAR -->
   <nav class="navbar navbar-expand-lg px-4 navbar-dark bg-dark">
-    <a class="navbar-brand d-flex align-items-center" href="index.html">
+    <a class="navbar-brand d-flex align-items-center" href="home.html">
       <span class="navbar-title fw-bold">← Home</span>
     </a>
 
