--- a/midterm/crud.html
+++ b/midterm/crud.html
@@ -5,18 +5,14 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>CRUD APP</title>
 
-  <!-- Performance -->
+  
   <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
-
-  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- Custom CSS -->
   <link rel="stylesheet" href="crud.css">
 </head>
 <body>
 
-  <!-- NAVBAR -->
+ 
   <nav class="navbar navbar-expand-lg px-4 navbar-dark bg-dark">
     <a class="navbar-brand d-flex align-items-center" href="home.html">
       <span class="navbar-title fw-bold">← Home</span>
@@ -25,11 +21,11 @@
     <div class="ms-auto text-gold fw-semibold">JSON API</div>
   </nav>
 
-  <!-- MAIN -->
+  
   <main class="container my-4">
     <div class="row g-4">
 
-      <!-- FORM -->
+      <!-- form -->
       <div class="col-lg-4">
         <div class="card">
           <div class="card-header">
@@ -58,7 +54,7 @@
         </div>
       </div>
 
-      <!-- TABLE -->
+      <!-- table displayed -->
       <div class="col-lg-8">
         <div class="d-flex justify-content-between align-items-center mb-2">
           <h4 class="m-0 text-gold">Posts</h4>
@@ -90,7 +86,7 @@
     </div>
   </main>
 
-  <!-- Scripts -->
+  
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="crud.js"></script>
